--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,10 @@
     
     <!-- SortableJS for drag and drop -->
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
-    
+
+    <!-- LXGW WenKai Screen -->
+    <link rel="stylesheet" href="https://npm.elemecdn.com/lxgw-wenkai-screen-webfont/style.css" media="print" onload="this.media='all'">
+
     <!-- Tailwind 自定义配置 -->
     <script>
         tailwind.config = {
